2004-10-31  Martin Blom  <martin@blom.org>

	* Released AHI 5.14.

	* Imported the rest of the AROS modifications from AROS
	CVS. Mostly Makefile mods.

	* Released emu10kx.audio 5.22.

	* emu10kx.audio: Reduced the volume boost by 6 dB. According to my
	voltmeter, the driver now outputs around 2 Vpp when the master
	volume is set to 0 dB and around 8 Vpp when the master volume is
	+12 dB. If you have a real oscilloscope, I'd be happy to hear your
	verification.

	* emu10kx.audio: Merged the AROS port by Georg Steger. Thanks
	Georg!

2004-10-29  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.21.
	
	* emu10kx.audio: Made the +12 dB boost work on Audigy too. [Marcin
	'Morgoth' Kurek]

2004-10-28  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.20.

	* emu10kx.audio: Added front channel downmix to center and LFE
	when playing mono or stereo sounds (-3 dB), just like the driver
	used to do for Audigy cards before. This is disabled in
	multichannel mode. [Marcin 'Morgoth' Kurek]

	* emu10kx.audio: Boosted AHI output by 12 dB (!).

2004-10-27  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.51.

	* Device/devsupp.c: I obviously have a nasty habit of not testing
	the code I write. "for (i = 0; i < size; ++size)"?! Yeah,
	right. And you know what's REALLY scary? It's been like that since
	late 2001! Anyway, recording in device mode or via AUDIO: should
	now work again. [Vladimir Javorski, Denis Markovic, Alexey Ivanov,
	Stefan Haubenthal]

2004-10-23  Martin Blom  <martin@blom.org>

	* Docs/ahiusr.texinfo: Fixed some typos. [Stefan Haubenthal]

2004-09-20  Martin Blom  <martin@blom.org>

	* ahi.device: Minor bugfixes from Davy.

	* emu10kx.audio: Added an OS4 reset handler patch from Davy.

2004-09-08  Martin Blom  <martin@blom.org>

	* Docs/ahiusr.texinfo: Added description of the default anti-click
	time. [Luca 'Hexaae' Long]

2004-08-13  Martin Blom  <martin@blom.org>

	* Added an updated german ahiprefs translation. [Stefan