@@ -512,7 +512,7 @@ m68k_PostTimer( struct AHIPrivAudioCtrl* audioctrl __asm("a2") )
 
 #else
 
-struct
+const struct
 {
     UWORD nop;                    // Just make sure the addr is 32-bit aligned
     UWORD pushm_d0_d1_a0_a1[2];
@@ -522,7 +522,7 @@ struct
     UWORD rts;
 } HookEntryPreserveAllRegs __attribute__ ((aligned (4))) =
 {
-  0x4E71,
+  0x4DD6,
   {0x48E7, 0xC0C0},
   0x4EB9, (ULONG) HookEntry,
   {0x4CDF, 0x0303},
@@ -530,7 +530,7 @@ struct
 };
 
 
-struct
+const struct
 {
     UWORD nop;
     UWORD pushm_d1_a0_a1[2];
@@ -541,7 +541,7 @@ struct
     UWORD rts;
 } PreTimerPreserveAllRegs =
 {
-  0x4E71,
+  0x4DD6,
   {0x48E7, 0x40C0},
   0x4EB9, (ULONG) &m68k_PreTimer,
   {0x4CDF, 0x0302},
@@ -550,7 +550,7 @@ struct
 };
 
 
-struct
+const struct
 {
     UWORD nop;                    // Just make sure the addr is 32-bit aligned
     UWORD pushm_d0_d1_a0_a1[2];
@@ -560,7 +560,7 @@ struct
     UWORD rts;
 } PostTimerPreserveAllRegs __attribute__ ((aligned (4))) =
 {
-  0x4E71,
+  0x4DD6,
   {0x48E7, 0xC0C0},
   0x4EB9, (ULONG) &m68k_PostTimer,
   {0x4CDF, 0x0303},
