@@ -1,3 +1,7 @@
+2004-11-01  Martin Blom  <martin@blom.org>
+
+	* Applied a couple of patches from Gunther Nikl. Thanks!
+
 2004-10-31  Martin Blom  <martin@blom.org>
 
 	* Released AHI 5.14.
